--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>CodeVie</title>
     <style>
         body {
-            font-family: 'Baloo Bhai 2', cursive, Arial, sans-serif;
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
@@ -141,7 +141,7 @@
             bottom: 100px;
             right: 100px;
         }
-        @media (max-width: 768px) {
+        @media (max-width: 1000px) {
             nav {
                 flex-direction: column;
             }
