--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="favicon.png">
     <title>CodeVie</title>
     <style>
         body {
@@ -164,7 +165,7 @@
     <header>
         <div class="logo">
             <!--logo-->
-            <img src="xxxxx.png" width="55" height="55" style="vertical-align: middle;">
+            <img src="logo.png" width="55" height="55" style="vertical-align: middle;">
             <span>Code</span><span>Vie</span>
         </div>
     </header>
