--- a/index.html
+++ b/index.html
@@ -5,168 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="favicon.png">
     <title>CodeVie</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            background: linear-gradient(135deg, #5a70db, #F28A6D);
-            background-attachment: fixed;
-            color: #000000;
-        }
-        header {
-            background-color: #000000;
-            color: white;
-            padding: 15px 25px;
-            text-align: left;
-        }
-        .logo {
-            display: inline-block;
-            font-size: 1.5em;
-            font-weight: bold;
-            color: #03880c;
-        }
-        .logo span:last-child {
-            color: #FF5722;
-        }
-        nav {
-            background: linear-gradient(135deg, #5a70db, #F28A6D);
-            color: white;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 20px;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-            flex-wrap: wrap;
-        }
-        nav .links {
-            display: flex;
-            flex-wrap: wrap;
-        }
-        nav a {
-            color: rgb(5, 6, 4);
-            margin: 0 15px;
-            text-decoration: none;
-            font-weight: bold;
-            transition: color 0.3s, text-decoration 0.3s;
-            cursor: pointer;
-        }
-        nav a:hover {
-            color: #eb9310;
-            text-shadow: 2px 2px 6px rgba(59, 230, 12, 0.3);
-        }
-        nav .search-bar {
-            display: flex;
-            align-items: center;
-            margin-top: 10px;
-        }
-        nav input[type="text"] {
-            padding: 10px;
-            width: 300px;
-            font-size: 16px;
-            border: 1px solid #ccc;
-            border-radius: 25px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            outline: none;
-            transition: border-color 0.3s;
-        }
-        nav input[type="text"]:focus {
-            border-color: #03880c;
-            box-shadow: 0 2px 8px rgba(0, 136, 12, 0.2);
-        }
-        main {
-            flex: 1;
-            padding: 20px;
-            text-align: center;
-        }
-        .content {
-            display: none;
-        }
-        .content.active {
-            display: block;
-        }
-        .contest {
-            border: 1px solid #cccccc;
-            border-radius: 8px;
-            padding: 15px;
-            margin: 10px 0;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            text-align: left;
-            transition: box-shadow 0.3s, transform 0.3s, backdrop-filter 0.3s;
-            background-color: rgba(255, 255, 255, 0.8);
-        }
-        .contest:hover {
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            transform: translateY(-5px);
-            backdrop-filter: blur(5px);
-            border-radius: 15px; /* Rounded corners on hover */
-        }
-        footer {
-            background-color: #fee9b4;
-            color: rgb(0, 0, 0);
-            text-align: center;
-            padding: 10px 0;
-            font-size: 12px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .hide {
-            display: none;
-        }
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-        .shape {
-            position: absolute;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 50%;
-            opacity: 0.7;
-        }
-        .shape-1 {
-            width: 150px;
-            height: 150px;
-            top: 50px;
-            left: 50px;
-        }
-        .shape-2 {
-            width: 100px;
-            height: 100px;
-            bottom: 100px;
-            right: 100px;
-        }
-        @media (max-width: 1000px) {
-            nav {
-                flex-direction: column;
-            }
-            nav .search-bar {
-                width: 100%;
-                justify-content: center;
-            }
-            nav input[type="text"] {
-                width: 100%;
-                margin-top: 10px;
-            }
-            nav .links {
-                justify-content: center;
-                margin-top: 10px;
-            }
-        }
-    </style>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="logo">
             <!--logo-->
-            <img src="logo.png" width="55" height="55" style="vertical-align: middle;">
-            <span>Code</span><span>Vie</span>
+            <img id="logo" src="logo.png" width="55" height="55" style="vertical-align: middle;">
+            <span id="name"><span>Code</span><span>Vie</span></span>
         </div>
     </header>
     <nav>
@@ -206,90 +52,6 @@
     </footer>
     <div class="shape shape-1"></div>
     <div class="shape shape-2"></div>
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            const contestList = document.getElementById("contest-list");
-            let users = [];
-            const now = new Date().toISOString();
-            const searchInput = document.querySelector("#search");
-
-            searchInput.addEventListener("input", (e) => {
-                const value = e.target.value.toLowerCase();
-                users.forEach(contest => {
-                    const isVisible = contest.title && contest.title.toLowerCase().includes(value);
-                    contest.Element.classList.toggle("hide", !isVisible);
-                });
-            });
-
-            const apiUrl = `https://clist.by/api/v4/contest/?username=Shaswat_78&api_key=733fd04bf4419f8b5a7fc837c9978ffcd43c316d&start__gt=${now}`;
-            
-            fetch(apiUrl)
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error(`HTTP error! status: ${response.status}`);
-                    }
-                    return response.json();
-                })
-                .then(data => {
-                    console.log("API response:", data);
-                    if (!data.objects || !Array.isArray(data.objects)) {
-                        throw new Error("Unexpected API response structure");
-                    }
-                    let contests = data.objects;
-                    contests.sort((a, b) => new Date(a.start) - new Date(b.start));
-
-                    if (contests.length === 0) {
-                        contestList.innerHTML = "<p>No contests available at the moment.</p>";
-                    } else {
-                        contestList.innerHTML = "";
-                        users = contests.map(contest => {
-                            const contestElement = document.createElement("div");
-                            contestElement.className = "contest";
-                            const contestTitle = document.createElement("h2");
-                            contestTitle.textContent = contest.event || "No title";
-                            const contestDetails = document.createElement("p");
-                            contestDetails.innerHTML = `Host: <a href="${contest.href || '#'}" target="_blank">${contest.host || "Unknown"}</a>`;
-                            const contestDuration = document.createElement("p");
-                            const durationInMinutes = Math.round(contest.duration / 60);
-                            contestDuration.textContent = `Duration: ${durationInMinutes} minutes`;
-                            const contestStart = document.createElement("p");
-                            contestStart.textContent = `Starts at: ${contest.start ? new Date(contest.start).toLocaleString() : "Unknown"}`;
-                            const contestEnd = document.createElement("p");
-                            contestEnd.textContent = `Ends at: ${contest.end ? new Date(contest.end).toLocaleString() : "Unknown"}`;
-
-                            contestElement.appendChild(contestTitle);
-                            contestElement.appendChild(contestDetails);
-                            contestElement.appendChild(contestDuration);
-                            contestElement.appendChild(contestStart);
-                            contestElement.appendChild(contestEnd);
-
-                            contestList.appendChild(contestElement);
-                            return { title: contest.event, details: contest.host, duration: contest.duration, start: contest.start, end: contest.end, Element: contestElement };
-                        });
-                    }
-                })
-                .catch(error => {
-                    console.error("Error fetching contests:", error, "Check Your Internet Connection");
-                    contestList.innerHTML = `<p class="error">Error fetching contests: ${error.message}</p>`;
-                });
-
-            
-            const homeLink = document.getElementById('home-link');
-            const aboutLink = document.getElementById('about-link');
-            const contactLink = document.getElementById('contact-link');
-            const sections = document.querySelectorAll('.content');
-
-            homeLink.addEventListener('click', () => showSection('home'));
-            aboutLink.addEventListener('click', () => showSection('about'));
-            contactLink.addEventListener('click', () => showSection('contact'));
-
-            function showSection(sectionId) {
-                sections.forEach(section => {
-                    section.classList.remove('active');
-                });
-                document.getElementById(sectionId).classList.add('active');
-            }
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
